Tabs update and android resources

--- a/src/pages/drinkOffers/drinkOffers.html
+++ b/src/pages/drinkOffers/drinkOffers.html
@@ -7,5 +7,37 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-card>
 
+    <ion-card-header>
+      3 drinks for 10€
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>
+        Only mondays.
+      </p>
+      <p>
+        Flannerys Bar.
+      </p>
+    </ion-card-content>
+
+  </ion-card>
+
+  <ion-card>
+
+    <ion-card-header>
+      First pint is free.
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>
+        Every day.
+      </p>
+      <p>
+        Myles Breen's Bar.
+      </p>
+    </ion-card-content>
+
+  </ion-card>
 </ion-content>
