--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -1,11 +1,26 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Drink offers
+      Events
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <ion-card>
 
+    <ion-card-header>
+      Tue, 2 Oct. Tom Baxter
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>
+        Dolans Warehouse
+      </p>
+      <p>
+        V94 PD79, 4 Saint Alphonsus Street, Limerick
+      </p>
+    </ion-card-content>
+
+  </ion-card>
 </ion-content>
