--- a/src/pages/bars/bars.html
+++ b/src/pages/bars/bars.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the BarsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -12,7 +6,38 @@
 
 </ion-header>
 
-
 <ion-content padding>
+  <ion-card>
 
+    <ion-card-header>
+      Myles Breen's Bar
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>
+        18 Shannon St, Limerick, V94 DXN3.
+      </p>
+      <p>
+        Open until 23:30.
+      </p>
+    </ion-card-content>
+
+  </ion-card>
+
+  <ion-card>
+
+    <ion-card-header>
+      Flannerys Bar Limerick
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>
+        17 Upper Denmark St, Limerick
+      </p>
+      <p>
+        Open until 23:45.
+      </p>
+    </ion-card-content>
+
+  </ion-card>
 </ion-content>
