--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -1,11 +1,12 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Drink offers
+      Map
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <div id="map" style="width: 100%; height: 100%">
+  </div>
 </ion-content>
