--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,8 +9,8 @@
             <h2>Sign in</h2>
 
             <ion-item>
-              <ion-label floating>Username</ion-label>
-              <ion-input type="text" name="username" [(ngModel)]="loginInfos.username"
+              <ion-label floating>Login</ion-label>
+              <ion-input type="text" name="login" [(ngModel)]="loginInfos.login"
                          required></ion-input>
             </ion-item>
 
