role required + loading

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -34,7 +34,7 @@
                         </ion-item>
                         <ion-item>
                             <ion-label>Role</ion-label>
-                            <ion-select [(ngModel)]="user.role" name="role">
+                            <ion-select [(ngModel)]="user.role" name="role" required>
                                 <ion-option value="PREMIUM">PREMIUM</ion-option>
                                 <ion-option value="USER">USER</ion-option>
                             </ion-select>
