dynamic bars and their details page

--- a/src/pages/barDetails/barDetails.html
+++ b/src/pages/barDetails/barDetails.html
@@ -1,9 +1,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title></ion-title>
+    <ion-title>{{bar?.name}}</ion-title>
   </ion-navbar>
 
 </ion-header>
-
+<ion-content>
+  {{bar?.address}}
 </ion-content>
