--- a/src/pages/bars/bars.html
+++ b/src/pages/bars/bars.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Bars</ion-title>
+    <ion-title>Pubs/Venues</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,7 +15,7 @@
 
     <ion-card-content>
       <p>
-        {{bar.adress}}
+        {{bar.address}}
       </p>
       <p>
        
