--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -12,28 +12,37 @@
         <form (ngSubmit)="signup()" #registerForm="ngForm">
             <ion-row>
                 <ion-col>
-                    <ion-list inset>
+                    <ion-list>
 
                         <ion-item>
-                            <ion-input type="text" placeholder="Username" name="username" [(ngModel)]="user.username"
+                            <ion-label floating>Username</ion-label>
+                            <ion-input type="text" name="username" [(ngModel)]="user.username" required></ion-input>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-label floating>Password</ion-label>
+                            <ion-input type="password" name="password" [(ngModel)]="user.password" required></ion-input>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-label floating>Password verification</ion-label>
+                            <ion-input type="password" name="passwordVerification" [(ngModel)]="passwordVerification"
                                 required></ion-input>
                         </ion-item>
 
                         <ion-item>
-                            <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="user.password"
-                                required></ion-input>
+                            <ion-label floating>Email</ion-label>
+                            <ion-input type="text" name="email" [(ngModel)]="user.email" required></ion-input>
                         </ion-item>
 
                         <ion-item>
-                            <ion-input type="password" placeholder="Password verification" name="passwordVerification"
-                                [(ngModel)]="passwordVerification" required></ion-input>
+                            <ion-label floating>Birthdate</ion-label>
+                            <ion-datetime displayFormat="DD/MM/YYYY" pickerFormat="DD MMMM YYYY" name="date"
+                                [(ngModel)]="birthdate" required></ion-datetime>
                         </ion-item>
 
                         <ion-item>
-                            <ion-input type="text" placeholder="Email" name="email" [(ngModel)]="user.email" required></ion-input>
-                        </ion-item>
-                        <ion-item>
-                            <ion-label>Role</ion-label>
+                            <ion-label floating>Role</ion-label>
                             <ion-select [(ngModel)]="user.role" name="role" required>
                                 <ion-option value="PREMIUM">PREMIUM</ion-option>
                                 <ion-option value="USER">USER</ion-option>
@@ -46,7 +55,8 @@
 
             <ion-row>
                 <ion-col class="signup-col">
-                    <button ion-button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Sign up
+                    <button ion-button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Sign
+                        up
                     </button>
                 </ion-col>
             </ion-row>
