--- a/src/pages/bars/bars.html
+++ b/src/pages/bars/bars.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Pubs/Venues</ion-title>
+    <ion-title>Pubs</ion-title>
   </ion-navbar>
 
 </ion-header>
