--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Offers" tabIcon="pricetags"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Pubs/Venues" tabIcon="pint"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Pubs" tabIcon="pint"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Map" tabIcon="pin"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="Gigs/Events" tabIcon="musical-notes"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Events" tabIcon="musical-notes"></ion-tab>
 </ion-tabs>
