--- a/src/pages/barDetails/barDetails.html
+++ b/src/pages/barDetails/barDetails.html
@@ -79,6 +79,8 @@
               Price:
             </strong> {{product.price}}€
           </p>
+          <rating [(ngModel)]="product.rating" readonly="false" small="true" (ngModelChange)="onModelChange()">
+          </rating>
         </ion-card-content>
 
       </ion-card>
