--- a/src/pages/barDetails/barDetails.html
+++ b/src/pages/barDetails/barDetails.html
@@ -66,9 +66,10 @@
         </div>
       </div>
     </div>
+    
     <div class="productCard">
       <ion-card *ngFor="let product of filteredProducts">
-
+        <img class="product-img" [src] = product.img/>
         <ion-card-header>
           {{product.name}}
         </ion-card-header>
