--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,12 +4,17 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to our app</h2>
-  <p>
-    
-  </p>
-  <p>
-    
-  </p>
+<ion-content>
+    <div class="container">
+        <img src="assets/imgs/drinks.jpg"/>
+        <div class="centered">What offers are near me?</div>
+    </div>
+    <div class="container">
+        <img src="assets/imgs/concert.jpg"/>
+        <div class="centered">What events are near me?</div>
+    </div>
+    <div class="container">
+        <img src="assets/imgs/bar.jpg"/>
+        <div class="centered">Where are the pubs located?</div>
+    </div>
 </ion-content>
