distance in events

--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -32,6 +32,11 @@
           Address:
         </strong> {{event?.barAddress}}
       </p>
+      <p>
+        <strong>
+          Distance:
+        </strong> {{event?.distance}} kms
+      </p>
     </ion-card-content>
 
   </ion-card>
